# Tetris

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.backup  LICENSE.txt  README.md  TODO.txt  Tetris.cbp  Tetris.sln  Tetris.vcxproj  Tetris.vcxproj.filters  actionhandler.cpp  actionhandler.h  ai.cpp  ai.h  background.h  bar.h  barcolor.cpp  barcolor.h  block.cpp  block.h  button.cpp  button.h  choosenbrofplayers.h  color.h  computer.cpp  computer.h  device.h  devicejoystick.cpp  devicejoystick.h  devicekeyboard.h  drawboard.cpp  drawboard.h  frame.cpp  frame.h  gamefont.cpp  gamefont.h  gamesound.cpp  gamesound.h  (+73 more)
Calculator/: CMakeLists.txt
Calculator/src/: main.cpp
Calculator/src/calc/: cache.cpp  cache.h  calculator.cpp  calculator.h  symbol.cpp  symbol.h
Gui/: CMakeLists.txt  README.md
Gui/src/gui/: actionlistener.h  borderlayout.h  boxlayout.h  button.cpp  button.h  checkbox.cpp  checkbox.h  component.cpp  component.h  dimension.h  flowlayout.h  frame.cpp  frame.h  gridlayout.h  guiwindow.cpp  guiwindow.h  inputformatter.h  label.cpp  label.h  layoutmanager.h  panel.cpp  panel.h  tbutton.cpp  tbutton.h  textfield.cpp  textfield.h  traversalgroup.h  verticallayout.h  widget.h
Gui/srcTest/: main.cpp
TetrisEngine/: .gitignore  CMakeLists.txt
TetrisEngine/data/: randomBlockTypes
TetrisEngine/src/: ai.cpp  ai.h  block.cpp  block.h  block2.h  computer.cpp  computer.h  flags.cpp  flags.h  flagsexception.h  main.cpp  player.h  random.h  rawtetrisboard.cpp  rawtetrisboard.h  rawtetrisboard2.h  square.h  tetrisboard.cpp  tetrisboard.h
TetrisEngine/srcLib/: ai.cpp  ai.h  block2.cpp  block2.h  random.h  rawtetrisboard.cpp  rawtetrisboard.h  rawtetrisboard2.cpp  square.h
TetrisEngine/srcTest/: flags.cpp  main.cpp
TinyXML2/: CMakeLists.txt
ais/: Worthless  ais
cmake/Modules/: FindCATCH2.cmake  FindSDL2_net.cmake
data/: README.txt  board.fra.glsl  board.ver.glsl  lightning.fra.glsl  lightning.ver.glsl  settings  tetris.json  tetris.xml
data/ais/: Defensive  ais
data/music/: README.txt
data/package/: mwetris.rc
dataTest/: test.xml
gui/: background.h  bar.h  barcolor.h  button.cpp  button.h  choosenbrofplayers.h  frame.cpp  glcoordinate.h  gui.h  guiitem.h  guiwindow.cpp  guiwindow.h  inputformatter.h  inputnumberformatter.h  main.cpp  textbox.h  textboxdraw.cpp  textbutton.h  textfield.cpp  textfield.h  textitem.cpp  textitem.h
nlohmann-json/src/: json.hpp
rlutil/: .gitignore  CMakeLists.txt
rlutil/src/: rlutil.cpp  rlutil.h
rlutil/srcTest/: test.cpp
rlutil/srcTestGame/: example.cpp
src/: actionhandler.h  ai.cpp  ai.h  background.h  bar.h  barcolor.h  boardbatch.h  boardshader.cpp  boardshader.h  boardshaderfunctions.cpp  boardshaderfunctions.h  boardsizebutton.cpp  boardsizebutton.h  boardvertexdata.cpp  boardvertexdata.h  buffer.cpp  buffer.h  button.cpp  button.h  color.h  component.h  computer.cpp  computer.h  connection.h  consolegraphic.cpp  consolegraphic.h  consolekeyboard.cpp  consolekeyboard.h  consoletetris.cpp  consoletetris.h  definitions.h  device.h  drawblock.cpp  drawblock.h  drawrow.cpp  drawrow.h  drawtext.cpp  drawtext.h  dynamicbuffer.cpp  dynamicbuffer.h  (+110 more)
